orchestrator/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchestrator-service
spec:
  selector:
    app: orchestrator
  ports:
  - protocol: TCP
    port: 5045
    targetPort: 5045
  clusterIP: 10.152.183.101
  type: ClusterIP
